fixed overflow problem in mobile

--- a/css/app.css
+++ b/css/app.css
@@ -2,6 +2,7 @@ body {
   font-size: 16px;
   font-family: "Poppins", sans-serif;
   background-color: #dcdcdc;
+  overflow-x: hidden;
 }
 
 html {
